@@ -11,6 +11,10 @@ New Features:
 - Added enums for Audio and Video codec types
 - Added capability to add IoFilters to RTMPConnection per application
 - Added AAC live streaming code based on Wittawas Nakkasem's IceSurf code
+- Created plug-in / server module system
+- Created ICY / NSV streaming plug-in
+- Created Authentication plug-in supporting FMS and Red5 authentication routines
+- Created Administration plug-in based on the admin demo
 
 Bugfixes:
 - Fixed bug with recording, where meta files were not removed when using the same name
